--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "fingerprintjs": "^0.5.3",
     "meteor-node-stubs": "^0.2.3",
     "mongod": "^1.3.0",
-    "mongojs": "^2.4.0",
-    "mongoose": "^4.6.0"
+    "mongojs": "^3.1.0",
+    mongoose": ">=5.7.5"
   }
 }
